# graphviz_app

./: .gitignore  CMakeLists.txt  GVApplicationDelegate.h  GVApplicationDelegate.m  GVAttributeInspectorController.h  GVAttributeInspectorController.m  GVAttributeSchema.h  GVAttributeSchema.m  GVDocument.h  GVDocument.m  GVExportViewController.h  GVExportViewController.m  GVFileNotificationCenter.h  GVFileNotificationCenter.m  GVGraphArguments.h  GVGraphArguments.m  GVGraphDefaultAttributes.h  GVGraphDefaultAttributes.m  GVWindowController.h  GVWindowController.m  GVZGraph.h  GVZGraph.m  Info.plist  Makefile  README.md  main.m
Base.lproj/: Attributes.xib  Document.xib  Export.xib  MainMenu.xib
en.lproj/: InfoPlist.strings
graphviz.xcodeproj/: project.pbxproj
prebuild/: Makefile  Makefile-packages.incl  optionals.mk
